src/objects/Product__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>DAZN Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>25535</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EffectiveEndDate__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EffectiveStartDate__c</fullName>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EntityID__c</fullName>
        <label>Entity ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Price_List__c</fullName>
        <description>Base for the List price</description>
        <label>Price List</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Per Billing Period</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <label>SKU</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpdatedDate__c</fullName>
        <label>DAZN Updated Date</label>
        <type>DateTime</type>
    </fields>
    <label>DAZN Product</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DAZN Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>